Aggiunta connessione db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TroublesGetAway</string>
+    <string name="welcome_to_troubles_get_away">Welcome to Troubles Get Away!</string>
 </resources>
