--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -2,8 +2,30 @@
 <resources>
     <string name="OK_Button_Text">OK</string>
     <string name="Cancel_Button_Text">Annulla</string>
+    <string name="Error">Errore</string>
+    <string name="Successful">Operazione completata!</string>
     <string name="Connection_Error">Errore di connessione</string>
 
+    <string name="app_name">TroublesGetAway</string>
     <string name="welcome_to_troubles_get_away">Benvenuto in Troubles Get Away!</string>
     <string name="invalidLoginParameters">Username e/o password non validi!</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_admin_main">AdminMainActivity</string>
+    <string name="title_activity_comune_main">ComuneMainActivity</string>
+    <string name="title_activity_utente_main">UtenteMainActivity</string>
+
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="repeated_password">Ripeti password</string>
+    <string name="name">Nome</string>
+    <string name="surname">Cognome</string>
+    <string name="phone">Cellulare</string>
+    <string name="email">E-mail</string>
+    <string name="state">Comune</string>
+    <string name="register_button_label">REGISTRATI</string>
+
+    <string name="missing_element">Dati mancanti!</string>
+    <string name="not_same_password_message">Password non coincidenti!</string>
+    <string name="already_existing_user">Utente già presente nel database!Scegliere un altro username.</string>
+    <string name="registration_successful">Utente registrato correttamente!</string>
 </resources>
