--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="OK_Button_Text">OK</string>
     <string name="Cancel_Button_Text">Cancel</string>
+    <string name="Error">Error</string>
+    <string name="Successful">Operation completed!</string>
     <string name="Connection_Error">Connection error</string>
 
     <string name="app_name">TroublesGetAway</string>
@@ -10,4 +12,20 @@
     <string name="title_activity_admin_main">AdminMainActivity</string>
     <string name="title_activity_comune_main">ComuneMainActivity</string>
     <string name="title_activity_utente_main">UtenteMainActivity</string>
+    
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="repeated_password">Repeat password</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="phone">Phone</string>
+    <string name="email">E-mail</string>
+    <string name="state">State</string>
+    <string name="register_button_label">REGISTER</string>
+
+    <string name="missing_element">Missing data!</string>
+    <string name="not_same_password_message">Passwords are not the same! Please check them.</string>
+    <string name="already_existing_user">User already registered!Please choose another username.</string>
+    <string name="registration_successful">User successfully registered! Proceed with the login.</string>
+
 </resources>
